--- a/ShopmeCommon/pom.xml
+++ b/ShopmeCommon/pom.xml
@@ -14,18 +14,30 @@
 	<name>ShopmeCommon</name>
 	<description>Common library</description>
 	<properties>
-		<java.version>15</java.version>
+		<java.version>17</java.version>
 	</properties>
 	<dependencies>
+		
+		<dependency>
+		    <groupId>uk.co.jemos.podam</groupId>
+		    <artifactId>podam</artifactId>
+		    <version>7.2.6.RELEASE</version>
+		    <scope>test</scope>
+		</dependency>
+				
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
+		
 		<dependency>
 			<groupId>com.mysql</groupId>
 			<artifactId>mysql-connector-j</artifactId>
 			<scope>runtime</scope>
 		</dependency>
+		
+		 
+		
 	</dependencies>
 
 </project>
