--- a/ShopmeWebParent/ShopmeBackEnd/src/main/resources/application.properties
+++ b/ShopmeWebParent/ShopmeBackEnd/src/main/resources/application.properties
@@ -20,3 +20,5 @@ spring.mail.username=salmandriva.dev@gmail.com
 spring.mail.password=dgks beqd nzoj sbva
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+
+upload.path=static/images/avatars/
