--- a/ShopmeWebParent/ShopmeBackEnd/src/main/resources/application.properties
+++ b/ShopmeWebParent/ShopmeBackEnd/src/main/resources/application.properties
@@ -9,6 +9,7 @@ spring.mvc.hiddenmethod.filter.enabled=true
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+spring.jpa.open-in-view=false
 spring.jpa.properties.hibernate.format_sql=true
 spring.thymeleaf.cache=false
 spring.thymeleaf.mode=HTML
