--- a/ShopmeWebParent/ShopmeBackEnd/pom.xml
+++ b/ShopmeWebParent/ShopmeBackEnd/pom.xml
@@ -41,6 +41,14 @@
 	        <artifactId>poi-ooxml</artifactId>
 	        <version>5.2.4</version> <!-- Ganti versi dengan versi terbaru -->
 	    </dependency>
+	    
+	    <!-- https://mvnrepository.com/artifact/net.coobird/thumbnailator -->
+		<dependency>
+		    <groupId>net.coobird</groupId>
+		    <artifactId>thumbnailator</artifactId>
+		    <version>0.4.20</version>
+		</dependency>
+
    		
 		<dependency>
 			<groupId>com.shopme</groupId>
