--- a/ShopmeWebParent/ShopmeFrontEnd/src/main/resources/application.properties
+++ b/ShopmeWebParent/ShopmeFrontEnd/src/main/resources/application.properties
@@ -1,2 +1,10 @@
-server.port=80
+server.port=8020
 server.servlet.context-path=/Shopme
+
+spring.datasource.url=jdbc:mysql://localhost:3306/shopmedb_test
+spring.datasource.username=root
+spring.datasource.password=
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
