--- a/ShopmeWebParent/ShopmeBackEnd/src/main/resources/application.properties
+++ b/ShopmeWebParent/ShopmeBackEnd/src/main/resources/application.properties
@@ -11,9 +11,9 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.open-in-view=false
 spring.jpa.properties.hibernate.format_sql=true
+
 spring.thymeleaf.cache=false
 spring.thymeleaf.mode=HTML
-
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
@@ -22,4 +22,4 @@ spring.mail.password=dgks beqd nzoj sbva
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
-upload.path=static/images/avatars/
+upload.path=static/images/
